# pdf-remediation

./: .gitignore  README.md  pyproject.toml
resources/configuration/: make-accessible.json
src/pdf_remediation/: Fix.py  License.py  LicenseActivate.py  LicenseDeactivate.py  Report.py  Validate.py  __init__.py
src/pdf_remediation/utilities/: PDFix.py  Resources.py  Vera.py  VeraPDF.py
