[project]
name = "pdf-remediation"
version = "0.1.0"
description = "Automated PDF remediation to meet WCAG 2.2 using Adobe API and PDFix SDK."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "parallelbar>=2.5",
    "pathlib>=1.0.1",
    "pdfix-sdk>=8.7.8",
    "pdfservices-sdk>=4.2.0",
    "python-dotenv>=1.2.1",
]

[project.scripts]
pdf-remediation = "pdf_remediation:main"

[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"
